--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-									<img src="images/yangbaru.jpeg">
+									<img src="fotomenu.jpeg">
 								</a>
 							</article>
 
@@ -53,16 +53,16 @@
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/IMG_20230319_142832_565 (1).jpg" alt=""></a>
+											<a href="#" class="image fit"><img src="1.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/277318184_1125324508012419_1533154451185957601_n (1).webp" alt="lukman"></a>
+											<a href="#" class="image fit"><img src="2.jpg" alt="lukman"></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/281590484_422178409738075_4512372456438338010_n.webp" alt=""></a>
+											<a href="#" class="image fit"><img src="3.JPG" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/IMG_20230814_030313_343.jpg" alt=""></a>
+											<a href="#" class="image fit"><img src="4.jpg" alt=""></a>
 										</div>
 									</div>
 								</section>
