--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-									<img src="fotomenu.jpeg">
+									<img src="fotomenu.jpg">
 								</a>
 							</article>
 
@@ -63,6 +63,12 @@
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="4.jpg" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="#" class="image fit"><img src="5.jpg" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="#" class="image fit"><img src="6.jpg" alt=""></a>
 										</div>
 									</div>
 								</section>
